2012-01-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Do not synchronize deleted administrator accounts
	* [TASK] Change PHP dependency (5.2 instead of 5.3)

2012-01-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.0.0
	* [TASK][DOC] Add administrator documentation
	* [TASK] Add debugging information and syslog messages
	* [TASK] Kickstart the extension